Fixed a bug with the pictures not showing up correctly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -582,7 +582,6 @@ tbody>tr:nth-child(odd) {
 
 body {
   margin: 0;
-  font-family: Arial;
 }
 
 /* The grid: Four equal columns that floats next to each other */
